# car-price-predictor

./: .gitignore  README.md  compose.yaml  pyproject.toml  utils.py
back-end/: Dockerfile  requirements.txt
back-end/app/: main.py  model.py  schemas.py
front-end/: Dockerfile  api.py  app.py  config.py  requirements.txt  styles.py
notebooks/: 00_get_data.ipynb  01_explore_and_split_data.ipynb  02_understand_and_visualize_data.ipynb  03_clean_data.ipynb  04_statistical_testing.ipynb  05_feature_engineering.ipynb  06_ml_pipeline.ipynb  feature_engineering.ipynb  ml_pipeline.ipynb
